--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         <p class="flow-text light red-text">Students are mere spectators</p>
                         <p class="flow-text light red-text">Students just listen about how to do it</p>
                         <p class="flow-text light red-text">Business decision makers present their solutions </p>
-                        <p class="flow-text light green-text">No mentoring of students </p>
+                        <p class="flow-text light red-text">No mentoring of students </p>
                     </div>
                     <div class="col s12 l6">
                         <h4 class="center light">Conference on IIOT</h4>
@@ -462,13 +462,13 @@
     <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
             <div class="row">
-                <div class="col l s6">
+                <div class="col l6 s12">
                     <img src="images/Logo_.jpg%20copy.png" class="col s6 ">
                     <!--<p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
                         from diffrent sectors and Institutes</p>-->
                 </div>
-                <div class="col l1 offset-l2 s3">
-                    <h5 class="black-text">Sitemap</h5>
+                <div class="col l3 s6">
+
                     <ul>
                         <li>
                             <a class="waves-effect black-text" href="index.html">Home</a>
@@ -489,9 +489,8 @@
                     </ul>
                 </div>
 
-                <div class="col l1 offset-l2 s3" style="width: 70px;">
-                    <h5 class="black-text"></h5>
-                    <br>
+                <div class="col l3 s6" ">
+
                     <ul>
                         <li>
                             <a class="waves-effect black-text" href="faq.html">FAQ's</a>
