--- a/index.html
+++ b/index.html
@@ -114,13 +114,10 @@
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
-                <h3 class="center orange-text "data-aos="zoom-in">IndNX 4.0</h3>
-                <h5 class="center orange-text "data-aos="zoom-in">Smart Industries Hackathon (Edition 1)</h5>
+                <h3 class="center orange-text " data-aos="zoom-in">IndNX 4.0</h3>
+                <h5 class="center orange-text " data-aos="zoom-in">Smart Industries Hackathon (Edition 1)</h5>
 
-                <p class="center  text-darken-2 padded-top-compact flow-text light">There's a lot of hype about terms like IoT, IIoT, Machine Learning, Artificial Intelligence among institute
-                    and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has
-                    come up with a unique Industry-Institution interaction event called IndNX 4.0 - Smart Industries Hackathon
-                    (Edition 1).</p>
+                <p class="center  text-darken-2 padded-top-compact flow-text light">There's a lot of hype about terms like IoT, IIoT, Machine Learning, Artificial Intelligence among institute and industry personnel, yet a lot of confusion revolves around these terms. To address this, CII has come up with a unique Industry-Institution interaction event called IndNX 4.0 - Smart Industries Hackathon (Edition 1).</p>
             </div>
         </section>
 
@@ -170,7 +167,7 @@
 
 
 
-                <h3 class="center orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">Objectives</h3>
+                <h3 class="center orange-text padded-bottom-compact padded-top-cozy" data-aos="zoom-in">Objectives</h3>
 
                 <p class="flow-text light">
                     Bridging increasing gap between academic institutions and corporate world.
@@ -334,7 +331,7 @@
 
 
 
-                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">How IndNX 4.0 is different?</h3>
+                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
 
                 <div class="row">
                     <div class="col s12 l6">
@@ -368,7 +365,7 @@
 
 
 
-                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">Institute Benefits</h3>
+                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy" data-aos="zoom-in">Institute Benefits</h3>
 
                 <p class="flow-text light">
                     Exposure to newer technologies and engineering methodologies
@@ -396,7 +393,7 @@
 
 
 
-                <h3 class="center orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">Industry Benefits</h3>
+                <h3 class="center orange-text padded-bottom-compact padded-top-cozy" data-aos="zoom-in">Industry Benefits</h3>
 
                 <p class="flow-text light padded-bottom-cozy">
                     Letting business decision makers know how IoT can help in taking their organization forward
@@ -419,7 +416,7 @@
 
         <section class="padded-comfortable">
 
-            <h3 class="center light orange-text padded-bottom-comfortable"data-aos="zoom-in">Partners</h3>
+            <h3 class="center light orange-text padded-bottom-comfortable" data-aos="zoom-in">Partners</h3>
             <div class="container">
                 <div class="row">
                     <img src="images/partners/syslogyx.png" alt="sponsor" class="col s6 m4 l3 sponsor">
@@ -440,8 +437,7 @@
         <!-- Map -->
         <section style="width: 100%; padding: 0px" id="venue-container">
 
-            <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020"
-                style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
+            <iframe class="googlemaps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14888.734079617625!2d79.0034903!3d21.1052484!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4fd4cb2d05b49c7d!2sG.+H.+Raisoni+College+of+Engineering!5e0!3m2!1sen!2sin!4v1529742413020" style="border:0;  width: 100%; height: 400px;" allowfullscreen></iframe>
 
 
 
@@ -482,42 +478,42 @@
                     </ul>
                 </div>
 
-                <div class="col l3 s6" ">
+                <div class="col l3 s6" >
 
                     <ul>
                         <li>
-                            <a class="waves-effect black-text" href="faq.html">FAQ's</a>
+                            <a class="waves-effect black-text " href="faq.html ">FAQ's</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="terms.html">Terms</a>
+                            <a class="waves-effect black-text " href="terms.html ">Terms</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="mentors.html">Mentors</a>
+                            <a class="waves-effect black-text " href="mentors.html ">Mentors</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="support.html">Support</a>
+                            <a class="waves-effect black-text " href="support.html ">Support</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="privacypolicy.html">Privacy Policy</a>
+                            <a class="waves-effect black-text " href="privacypolicy.html ">Privacy Policy</a>
                         </li>
 
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright">
-            <div class="container">
-                <a href="https://dayshmookh.github.io/" class="black-text" target="_blank">© 2018 R00T INC.</a>
-                <!--<a class="black-text right" href="#!">More Links</a>-->
+        <div class="footer-copyright ">
+            <div class="container ">
+                <a href="https://dayshmookh.github.io/ " class="black-text " target="_blank ">© 2018 R00T INC.</a>
+                <!--<a class="black-text right " href="#! ">More Links</a>-->
             </div>
         </div>
     </footer>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/materialize.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/tilt.jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/jquery.min.js "></script>
+    <script src="js/materialize.min.js "></script>
+    <script src="js/aos.js "></script>
+    <script src="js/tilt.jquery.min.js "></script>
+    <script src="js/script.js "></script>
     <script>
         $(document).ready(function () {
             /* $('#hero-slider').slider({
