--- a/conference.html
+++ b/conference.html
@@ -97,7 +97,7 @@
             <div class="parallax-container">
                 <div class="valign-wrapper full-height">
                     <div class="container full-width">
-                        <h1 class="light center white-text">Conference</h1>
+                        <h1 class="strong center white-text">Conference</h1>
                     </div>
                 </div>
                 <div class="parallax">
@@ -129,7 +129,7 @@
         <br>
         <div class="row">
             <div class="col s12 l6 center">
-                <h4 class="orange-text">Event Dates</h4>
+                <h4 class="orange-text strong">Event Dates</h4>
                 <div class="divider" id="eventdivider"></div>
                 <p class="light" id="date">Conference Day - <span class="orange-text">28th sept </span>
 
@@ -139,7 +139,7 @@
 
             </div>
             <div class="col s12 l6 center">
-                <h4 class="orange-text">Event Venue</h4>
+                <h4 class="orange-text strong">Event Venue</h4>
                 <div class="divider" id="eventdivider"></div>
                 <p  class="light " id="venue"><span class="orange-text">TCS</span> Mihan</p>
             </div>
@@ -157,7 +157,7 @@
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
-                <h2 class="center light orange-text " data-aos="zoom-in">Some highlights of event</h2>
+                <h2 class="center strong orange-text " data-aos="zoom-in">Some highlights of event</h2>
                 <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
                     Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph
                     text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
@@ -170,7 +170,7 @@
 
         <section class="padded-top-comfortable padded-bottom-comfortable">
 
-            <h2 class="center light orange-text padded-bottom-comfortable "data-aos="zoom-in">Speakers</h2>
+            <h2 class="center strong orange-text padded-bottom-comfortable "data-aos="zoom-in">Speakers</h2>
 
 
             <div class="row container">
@@ -233,7 +233,7 @@
 
         <section class="padded-top-comfortable padded-bottom-comfortable">
             <div class="row container">
-                <h2 class="center light orange-text padded-bottom-comfortable"data-aos="zoom-in">Topics</h2>
+                <h2 class="center strong orange-text padded-bottom-comfortable"data-aos="zoom-in">Topics</h2>
                 <ul class="collapsible expandable">
                     <li>
                         <div class="collapsible-header valign-wrapper   ">
