--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
 
             <div class="col s12 m6 ">
 
-                <h3 class="center light orange-text">Contact us</h3>
+                <h3 class="center strong orange-text">Contact us</h3>
 
 
                 <form class="container">
