--- a/hackathon.html
+++ b/hackathon.html
@@ -106,7 +106,7 @@
                 <div class="valign-wrapper full-height">
                     <div class="container full-width">
 
-                        <h1 class="light center white-text">SMART INDUSTRIAL HACKATHON</h1>
+                        <h1 class="strong center white-text">SMART INDUSTRIAL HACKATHON</h1>
 
 
                     </div>
@@ -167,7 +167,7 @@
         <br>
         <div class="row">
             <div class="col s12 l6 center">
-                <h4 class="orange-text">Event Dates</h4>
+                <h4 class="orange-text strong">Event Dates</h4>
                 <div class="divider" id="eventdivider"></div>
                 <p id="dates">Hackathon Registration - <span class="orange-text">5th July - 15th July</span>
                     <br> Prototype Implementation - <span class="orange-text">16th July - 13th September</span> <br>Project Submission - <span class="orange-text">14th September</span> <br>Project Presentation - <span class="orange-text">17th September - 21st September</span>
@@ -177,7 +177,7 @@
 
             </div>
             <div class="col s12 l6 center">
-                <h4 class="orange-text">Event Venue</h4>
+                <h4 class="orange-text strong">Event Venue</h4>
                 <div class="divider" id="eventdivider"></div>
                 <p id="venue"><span class="orange-text">TCS</span> Mihan</p>
             </div>
@@ -186,7 +186,7 @@
 
 
         <section class="padded-cozy">
-            <h3 class="orange-text center padded-bottom-cozy">Prizes</h3>
+            <h3 class="orange-text center padded-bottom-cozy strong">Prizes</h3>
 
             <div class="container">
                 <div class="row">
@@ -250,7 +250,7 @@
 
         <section class="padded-bottom-cozy ">
             <div id="domain">
-                <h3 class="orange-text center ">Domains</h3>
+                <h3 class="orange-text center strong">Domains</h3>
                <!-- <p class="center light flow-text">
                     1. Life Science, Textile, Healthcare & Pharmacy
                     <br> 2. Automobile, Defence & Aerospace
@@ -280,7 +280,7 @@
 
         <section>
             <div class="container padded-top-cozy padded-bottom-cozy">
-                <h3 class="orange-text center padded-bottom-comfortable">Guidelines</h3>
+                <h3 class="orange-text center padded-bottom-comfortable strong">Guidelines</h3>
 
                 <p>
 
@@ -297,7 +297,7 @@
 
         <section>
             <div class="container padded-top-cozy padded-bottom-cozy">
-                <h3 class="orange-text center padded-bottom-cozy">Technology info</h3>
+                <h3 class="orange-text center padded-bottom-cozy strong">Technology info</h3>
 
                 <p>
 
