--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <a href="hackathon.html">
                         <div class="col s12 m6 padded-top-comfortable" data-aos="flip-left">
                             <div class="card tiny zoomer fader valign-wrapper rounded" style="background-image: url('images/hero-slider/1.jpg')">
-                                <h2 class="light white-text center full-width">Hackathon</h2>
+                                <h2 class="strong white-text center full-width">Hackathon</h2>
                             </div>
                         </div>
 
@@ -150,7 +150,7 @@
                     <a href="conference.html">
                         <div class="col s12 m6  padded-top-comfortable" data-aos="flip-right">
                             <div class="card tiny zoomer fader valign-wrapper rounded" style="background-image: url('images/hero-slider/2.jpg')">
-                                <h2 class="light white-text center full-width">Conference</h2>
+                                <h2 class="strong white-text center full-width">Conference</h2>
                             </div>
                         </div>
                     </a>
