--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
                 <div class="row">
 
                     <a href="hackathon.html">
-                        <div class="col s12 m6 padded-top-comfortable" data-aos="flip-left">
-                            <div class="card tiny zoomer fader valign-wrapper rounded" style="background-image: url('images/hero-slider/1.jpg')">
-                                <h2 class="light white-text center full-width">Hackathon</h2>
+                        <div class="col s12 m6" data-aos="zoom-in">
+                            <div class="card tiny valign-wrapper" style="background-image: url('images/code.jpg')">
+                                <h1 class="light white-text strong center full-width">Hackathon</h1>
                             </div>
                         </div>
 
                     </a>
                     <a href="conference.html">
-                        <div class="col s12 m6  padded-top-comfortable" data-aos="flip-right">
-                            <div class="card tiny zoomer fader valign-wrapper rounded" style="background-image: url('images/hero-slider/2.jpg')">
-                                <h2 class="light white-text center full-width">Conference</h2>
+                        <div class="col s12 m6" data-aos="zoom-in">
+                            <div class="card tiny valign-wrapper" style="background-image: url('images/edwin-andrade-153753-unsplash.jpg')">
+                                <h2 class="light white-text strong center full-width">Conference</h2>
                             </div>
                         </div>
                     </a>
@@ -192,18 +192,18 @@
             <div class="valign-wrapper full-height">
                 <div class="container full-width">
 
-                    <h3 class="light center white-text">Register</h3>
+                    <h3 class="light center white-text" style="font-size: 100px;">Register</h3>
                     <!--  <p class="center light white-text">Ssome details about registeration if any.</p>
                   -->
                     <p class="center">
-                        <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
+                        <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat yellow-text">Register now</a>
                     </p>
 
                 </div>
             </div>
 
             <div class="parallax">
-                <img src="images/bookcase-books-bookshelves-159711.jpg" alt="Unsplashed background img 1">
+                <img src="images/bruno-martins-25865-unsplash.jpg" alt="Unsplashed background img 1">
             </div>
         </div>
 
@@ -334,19 +334,28 @@
 
 
 
-                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy"data-aos="zoom-in">How IndNX 4.0 is different?</h3>
+                <h3 class="center light orange-text padded-bottom-compact padded-top-cozy" style="font-size: 70px;" data-aos="zoom-in">How IndNX 4.0 is different?</h3>
 
                 <div class="row">
                     <div class="col s12 l6">
                         <h4 class="center light">Traditional Events</h4>
-                        <p class="flow-text light red-text">Superficial discussions</p>
-                        <p class="flow-text light red-text">Students are mere spectators</p>
-                        <p class="flow-text light red-text">Students just listen about how to do it</p>
-                        <p class="flow-text light red-text">Business decision makers present their solutions </p>
-                        <p class="flow-text light green-text">No mentoring of students </p>
+                        <br>
+                        <ol>
+                            <li style="margin-left: 0px;">
+                                  <p class="flow-text light orange-text"><i class="material-icons yellow-text text-darken-4">donut_large</i>Superficial discussions</p>
+                            </li>
+                            <li>
+                                <p class="flow-text light orange-text"><i class="material-icons yellow-text text-darken-4">donut_large</i>Students are mere spectators</p>
+                            </li>
+                        </ol>
+
+                        <p class="flow-text light orange-text">Students just listen about how to do it</p>
+                        <p class="flow-text light orange-text">Business decision makers present their solutions </p>
+                        <p class="flow-text light orange-text">No mentoring of students </p>
                     </div>
                     <div class="col s12 l6">
                         <h4 class="center light">Conference on IIOT</h4>
+                        <br>
                         <p class="flow-text light green-text">Learn entire approach that goes into building an IoT solution</p>
                         <p class="flow-text light green-text">Students an important part of the event</p>
                         <p class="flow-text light green-text">Students would build an end to end IoT solution</p>
