--- a/hackathon.html
+++ b/hackathon.html
@@ -102,11 +102,11 @@
 
     <main>
         <section>
-            <div class="parallax-container">
+            <div class="parallax-container" style="height: 100vh;">
                 <div class="valign-wrapper full-height">
                     <div class="container full-width">
 
-                        <h1 class="strong center white-text">SMART INDUSTRIAL HACKATHON</h1>
+                        <h1 class="light center white-text">SMART INDUSTRIAL HACKATHON</h1>
 
 
                     </div>
