--- a/conference.html
+++ b/conference.html
@@ -97,7 +97,7 @@
             <div class="parallax-container">
                 <div class="valign-wrapper full-height">
                     <div class="container full-width">
-                        <h1 class="strong center white-text">Conference</h1>
+                        <h1 class="strong center white-text">CONFERENCE</h1>
                     </div>
                 </div>
                 <div class="parallax">
@@ -152,7 +152,7 @@
 
 
 
-        <section class="padded-top-comfortable padded-bottom-comfortable">
+        <section class="padded-top-comfortable padded-bottom-comfortable grey lighten-3">
 
             <div class="container">
 
@@ -224,7 +224,7 @@
 
         <div class="divider"></div>
 
-        <section class="padded-top-comfortable padded-bottom-comfortable">
+        <section class="padded-top-comfortable padded-bottom-comfortable grey lighten-3">
             <div class="row container">
                 <h2 class="center strong orange-text padded-bottom-comfortable" data-aos="zoom-in">Topics</h2>
                 <ul class="collapsible expandable">
