--- a/hackathon.html
+++ b/hackathon.html
@@ -185,7 +185,7 @@
         <div class="divider" x></div>
 
 
-        <section class="padded-cozy">
+        <section class="padded-cozy grey lighten-3">
             <h3 class="orange-text center padded-bottom-cozy strong">Prizes</h3>
 
             <div class="container">
@@ -278,7 +278,7 @@
 
 
 
-        <section>
+        <section class="grey lighten-3">
             <div class="container padded-top-cozy padded-bottom-cozy">
                 <h3 class="orange-text center padded-bottom-comfortable strong">Guidelines</h3>
 
