--- a/index.html
+++ b/index.html
@@ -372,14 +372,14 @@
         <div class="divider"></div>
 
 
-        <section>
-            <div class="container center padded-bottom-cozy">
+        <section class=" grey lighten-3">
+            <div class="container center padded-bottom-cozy grey lighten-3">
 
 
 
-                <h3 class="center  orange-text padded-bottom-compact padded-top-cozy" data-aos="zoom-in strong">Institute Benefits</h3>
+                <h3 class="center  light orange-text  padded-bottom-compact padded-top-cozy" data-aos="zoom-in strong">Institute Benefits</h3>
 
-                <p class="flow-text light">
+                <p class="flow-text ">
                     Exposure to newer technologies and engineering methodologies
                     <br> Opportunity to present project prototype on the conference day
                     <br> Chance to get noticed by Industrialists/Mentors/Investors
@@ -426,7 +426,7 @@
 
         <div class="divider"></div>
 
-        <section class="padded-comfortable">
+        <section class="padded-comfortable grey lighten-3">
 
             <h3 class="center  orange-text padded-bottom-comfortable" data-aos="zoom-in  strong">Partners</h3>
             <div class="container">
