--- a/hackathon.html
+++ b/hackathon.html
@@ -167,17 +167,44 @@
         <br>
         <div class="row">
             <div class="col s12 l6 center">
-                <h4 class="orange-text strong">Event Dates</h4>
+                <!--<h4 class="orange-text strong">Event Dates</h4>-->
+                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
+<g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)"
+fill="#ff9800" stroke="none">
+<path d="M120 570 c0 -28 -2 -30 -40 -30 l-40 0 0 -240 0 -240 270 0 270 0 0
+240 0 240 -40 0 c-38 0 -40 2 -40 30 0 27 -3 30 -30 30 -27 0 -30 -3 -30 -30
+0 -29 -1 -30 -50 -30 -49 0 -50 1 -50 30 0 27 -3 30 -30 30 -27 0 -30 -3 -30
+-30 0 -29 -1 -30 -50 -30 -49 0 -50 1 -50 30 0 27 -3 30 -30 30 -27 0 -30 -3
+-30 -30z m0 -80 c0 -27 3 -30 30 -30 27 0 30 3 30 30 0 29 1 30 50 30 49 0 50
+-1 50 -30 0 -27 3 -30 30 -30 27 0 30 3 30 30 0 29 1 30 50 30 49 0 50 -1 50
+-30 0 -27 3 -30 30 -30 27 0 30 3 30 31 0 27 3 30 28 27 l27 -3 0 -215 0 -215
+-245 0 -245 0 -2 205 c-1 113 0 211 2 218 3 6 16 12 30 12 21 0 25 -5 25 -30z"/>
+<path d="M266 308 c-3 -29 -6 -70 -6 -90 l0 -38 50 0 50 0 0 38 c0 20 -3 61
+-6 90 l-7 52 -37 0 -37 0 -7 -52z"/>
+</g>
+</svg>
+                <br><br>
+
                 <div class="divider" id="eventdivider"></div>
                 <p id="dates">Hackathon Registration - <span class="orange-text">5th July - 15th July</span>
                     <br> Prototype Implementation - <span class="orange-text">16th July - 13th September</span> <br>Project Submission - <span class="orange-text">14th September</span> <br>Project Presentation - <span class="orange-text">17th September - 21st September</span>
                 </p>
-
-                <br>
-
             </div>
             <div class="col s12 l6 center">
-                <h4 class="orange-text strong">Event Venue</h4>
+                <!--<h4 class="orange-text strong">Event Venue</h4>-->
+                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="64.000000pt" height="64.000000pt" viewBox="0 0 64.000000 64.000000" preserveAspectRatio="xMidYMid meet">
+<g transform="translate(0.000000,64.000000) scale(0.100000,-0.100000)"
+fill="#ff9800" stroke="none">
+<path d="M160 467 c-115 -77 -91 -239 65 -441 21 -28 40 -15 94 69 113 173
+121 304 22 371 -49 33 -134 34 -181 1z m168 -32 c40 -33 56 -76 49 -131 -5
+-51 -62 -170 -105 -222 l-27 -33 -44 67 c-102 155 -110 273 -22 327 41 26 114
+22 149 -8z"/>
+<path d="M219 389 c-73 -27 -51 -139 28 -139 87 0 102 121 18 143 -11 3 -32 1
+-46 -4z"/>
+</g>
+</svg>
+                <br>
+                <br>
                 <div class="divider" id="eventdivider"></div>
                 <p id="venue"><span class="orange-text">TCS</span> Mihan</p>
             </div>
@@ -250,8 +277,9 @@
 
         <section class="padded-bottom-cozy ">
             <div id="domain">
+
                 <h3 class="orange-text center strong">Domains</h3>
-               <!-- <p class="center light flow-text">
+                <!-- <p class="center light flow-text">
                     1. Life Science, Textile, Healthcare & Pharmacy
                     <br> 2. Automobile, Defence & Aerospace
                     <br> 3. Logistics, Supply Chain & Warehousing
@@ -262,9 +290,9 @@
 
                 </p>-->
                 <div class="container center padded-top-compact">
-                    
-                        <img src="images/domain.png" alt="" style="max-width: 90vw;">
-                  
+
+                    <img src="images/domain.png" alt="" style="max-width: 90vw;">
+
                 </div>
             </div>
 
@@ -280,7 +308,20 @@
 
         <section>
             <div class="container padded-top-cozy padded-bottom-cozy">
-                <h3 class="orange-text center padded-bottom-comfortable strong">Guidelines</h3>
+
+                <h3 class="orange-text center padded-bottom-comfortable strong"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="30.000000pt" height="30.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
+<g transform="translate(0.000000,50.000000) scale(0.100000,-0.100000)"
+fill="#ff9800" stroke="none">
+<path d="M145 462 c-49 -23 -99 -78 -115 -127 -7 -20 -10 -67 -8 -105 5 -87
+40 -141 119 -183 48 -26 61 -28 122 -24 80 5 132 36 180 104 24 33 30 55 34
+110 4 61 2 74 -24 122 -17 32 -45 66 -71 85 -39 27 -53 31 -120 34 -59 2 -87
+-2 -117 -16z m195 -32 c123 -62 147 -221 47 -320 -150 -151 -396 7 -328 211
+17 52 80 109 138 124 54 14 92 10 143 -15z"/>
+<path d="M233 311 c-67 -31 -125 -60 -129 -64 -4 -4 23 -7 59 -7 l67 0 0 -70
+c0 -38 3 -70 8 -70 8 0 127 258 121 264 -2 2 -59 -22 -126 -53z"/>
+</g>
+</svg> Guidelines
+                </h3>
 
                 <p>
 
@@ -297,7 +338,21 @@
 
         <section>
             <div class="container padded-top-cozy padded-bottom-cozy">
-                <h3 class="orange-text center padded-bottom-cozy strong">Technology info</h3>
+                <h3 class="orange-text center padded-bottom-cozy strong"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="50.000000pt" height="50.000000pt" viewBox="0 0 50.000000 50.000000" preserveAspectRatio="xMidYMid meet">
+<g transform="translate(0.000000,50.000000) scale(0.100000,-0.100000)"
+fill="#ff9800" stroke="none">
+<path d="M363 468 c-4 -7 -26 -14 -48 -15 -22 -1 -63 -5 -92 -9 -39 -4 -58 -2
+-75 10 -35 25 -100 21 -126 -7 -28 -30 -30 -95 -3 -128 20 -26 111 -191 111
+-202 0 -4 -18 -7 -40 -7 -46 0 -63 -22 -58 -73 l3 -32 183 -3 183 -2 -3 52 -3
+53 -47 3 -47 3 -60 106 c-34 58 -61 107 -61 109 0 2 18 4 40 4 22 0 40 -4 40
+-10 0 -5 22 -10 49 -10 34 0 51 -4 55 -15 3 -8 13 -15 22 -15 24 0 114 53 114
+68 0 18 -19 15 -66 -13 l-43 -25 -15 22 c-20 29 -20 67 0 96 l16 23 45 -26
+c53 -29 63 -31 63 -10 0 15 -88 65 -114 65 -8 0 -19 -6 -23 -12z m-197 -185
+c6 -10 30 -53 53 -95 l42 -78 -45 0 -46 0 -45 89 -45 90 28 4 c15 2 32 5 37 6
+6 0 15 -7 21 -16z m204 -228 l0 -25 -155 0 c-144 0 -155 1 -155 18 0 10 3 22
+7 25 3 4 73 7 155 7 l148 0 0 -25z"/>
+</g>
+</svg> Technology info</h3>
 
                 <p>
 
@@ -320,7 +375,7 @@
 
 
 
-      <!--  <section>
+        <!--  <section>
             <div class="row container padded-top-cozy padded-bottom-cozy">
                 <h3 class="orange-text center padded-bottom-cozy">Problem Statements</h3>
 
@@ -457,7 +512,7 @@
     <script src="js/materialize.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/tilt.jquery.min.js"></script>
-<script src="js/script.js"></script>
+    <script src="js/script.js"></script>
     <script>
         var elem = document.querySelector('.collapsible.expandable');
         var instance = M.Collapsible.init(elem, {
