--- a/conference.html
+++ b/conference.html
@@ -94,14 +94,14 @@
     <main>
 
         <section>
-            <div class="parallax-container">
+            <div class="parallax-container" style="height: 100vh;">
                 <div class="valign-wrapper full-height">
-                    <div class="container full-width">
-                        <h1 class="strong center white-text">CONFERENCE</h1>
+                    <div class="container">
+                        <h1 class="light center white-text" style="font-size: 60px;">CONFERENCE</h1>
                     </div>
                 </div>
                 <div class="parallax">
-                    <img src="images/hero-slider/2.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);">
+                    <img src="images/Conference%20on%20India%202017.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);">
                 </div>
             </div>
         </section>
