--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,6 @@
         </section>
 
     </main>
-
     <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
             <div class="row">
@@ -172,8 +171,8 @@
                     <!--<p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
                         from diffrent sectors and Institutes</p>-->
                 </div>
-                <div class="col l1 offset-l2 s3">
-                    <h5 class="black-text">Sitemap</h5>
+                <div class="col l3 s6">
+
                     <ul>
                         <li>
                             <a class="waves-effect black-text" href="index.html">Home</a>
@@ -190,45 +189,40 @@
                         <li>
                             <a class="waves-effect black-text" href="contact.html">Contact</a>
                         </li>
-                        <li>
-                            <a class="waves-effect black-text" href="faq.html">FAQ</a>
-                        </li>
 
                     </ul>
                 </div>
 
-                <div class="col l1 offset-l2 s3" style="width: 70px;">
-                    <h5 class="black-text"></h5>
-                    <br>
+                <div class="col l3 s6">
+
                     <ul>
                         <li>
-                            <a class="waves-effect black-text" href="faq.html">FAQ's</a>
+                            <a class="waves-effect black-text " href="faq.html ">FAQ's</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="terms.html">Terms</a>
+                            <a class="waves-effect black-text " href="terms.html ">Terms</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="mentors.html">Mentors</a>
+                            <a class="waves-effect black-text " href="mentors.html ">Mentors</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="support.html">Support</a>
+                            <a class="waves-effect black-text " href="support.html ">Support</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="privacypolicy.html">Privacy Policy</a>
+                            <a class="waves-effect black-text " href="privacypolicy.html ">Privacy Policy</a>
                         </li>
 
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="footer-copyright">
-            <div class="container">
-                <a href="https://dayshmookh.github.io/" class="black-text" target="_blank">© 2018 R00T INC.</a>
-                <a class="black-text right" href="#!">More Links</a>
+        <div class="footer-copyright ">
+            <div class="container ">
+                <a href="https://dayshmookh.github.io/ " class="black-text " target="_blank ">© 2018 R00T INC.</a>
+                <!--<a class="black-text right " href="#! ">More Links</a>-->
             </div>
         </div>
     </footer>
-
 
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
