--- a/faq.html
+++ b/faq.html
@@ -198,31 +198,34 @@ Email- idea[at]i4c[dot]co[dot]in
        </p>
    </main>
    <br><br>
-    <footer class="page-footer white" style="border-top: 8px solid orange">
-        <div class="container">
+
+   <section style="border-top: 6px solid orange">
+            <div class="parallax-container" style="height: 35vh;">
+                  <div class="container">
+                  <br><br>
             <div class="row">
                 <div class="col l6 s12">
                     <img src="images/Logo_.jpg%20copy.png" class="col s6 ">
-                    <!--<p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
+                    <!--<p class="white-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
                         from diffrent sectors and Institutes</p>-->
                 </div>
                 <div class="col l3 s6">
 
                     <ul>
                         <li>
-                            <a class="waves-effect black-text" href="index.html">Home</a>
+                            <a class="waves-effect white-text" href="index.html">Home</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="hackathon.html">Hackathon</a>
+                            <a class="waves-effect white-text" href="hackathon.html">Hackathon</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="conference.html">Conference</a>
+                            <a class="waves-effect white-text" href="conference.html">Conference</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="about.html">About</a>
+                            <a class="waves-effect white-text" href="about.html">About</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="contact.html">Contact</a>
+                            <a class="waves-effect white-text" href="contact.html">Contact</a>
                         </li>
 
                     </ul>
@@ -232,19 +235,19 @@ Email- idea[at]i4c[dot]co[dot]in
 
                     <ul>
                         <li>
-                            <a class="waves-effect black-text " href="faq.html ">FAQ's</a>
+                            <a class="waves-effect white-text " href="faq.html ">FAQ's</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text " href="terms.html ">Terms</a>
+                            <a class="waves-effect white-text " href="terms.html ">Terms</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text " href="mentors.html ">Mentors</a>
+                            <a class="waves-effect white-text " href="mentors.html ">Mentors</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text " href="support.html ">Support</a>
+                            <a class="waves-effect white-text " href="support.html ">Support</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text " href="privacypolicy.html ">Privacy Policy</a>
+                            <a class="waves-effect white-text " href="privacypolicy.html ">Privacy Policy</a>
                         </li>
 
                     </ul>
@@ -253,11 +256,14 @@ Email- idea[at]i4c[dot]co[dot]in
         </div>
         <div class="footer-copyright ">
             <div class="container ">
-                <a href="https://dayshmookh.github.io/ " class="black-text " target="_blank ">© 2018 R00T INC.</a>
-                <!--<a class="black-text right " href="#! ">More Links</a>-->
+                <a href="https://dayshmookh.github.io/ " class="white-text " target="_blank ">© 2018 R00T INC.</a>
+                <!--<a class="white-text right " href="#! ">More Links</a>-->
             </div>
         </div>
-    </footer>
-
+                <div class="parallax">
+                    <img src="images/architecture-buildings-city-358488.jpg" alt="Unsplashed background img 1" style="opacity: 0.2;    filter: brightness(30%) saturate(150%);">
+                </div>
+            </div>
+        </section>
     </body>
 </html>
