--- a/conference.html
+++ b/conference.html
@@ -97,7 +97,7 @@
             <div class="parallax-container" style="height: 100vh;">
                 <div class="valign-wrapper full-height">
                     <div class="container">
-                        <h1 class="light center white-text" style="font-size: 60px;">CONFERENCE</h1>
+                        <h1 class="light center white-text" style="font-size: 100px;">CONFERENCE</h1>
                     </div>
                 </div>
                 <div class="parallax">
@@ -259,7 +259,7 @@ fill="#ff9800" stroke="none">
                             <i class="material-icons orange-text">adjust</i>
                             <p class="grey-text text-darken-2">Topic Name</p>
                         </div>
-                        <div class="collapsible-body">
+                        <div class="collapsible-body grey lighten-2">
                             <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd vagb yy wfe syfk bib ygergyb</p>
                         </div>
                     </li>
